--- a/web/template/Overview.phtml
+++ b/web/template/Overview.phtml
@@ -13,7 +13,11 @@
     <div class="row">
         <div class="col-sm-3">
             <div class="rounded bg-primary px-2 py-1">
-                <h3 class="text-right"><?= $meter ?> <small>kWh</small></h3>
+                <h3 class="text-right">
+                    <a href="http://192.168.1.207:8081/" style="color: inherit">
+						<?= $meter ?> <small>kWh</small>
+                    </a>
+                </h3>
                 <h5 class="text-right">&nbsp;</h5>
                 <small class="">Meter value</small>
             </div>
